tests/miniJava/neg/000219_mutation.MiniJava
class java { public static void class java { } Main ( String [ ] java ) { { } } }
